# celestial_bodies

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
src/components/: base.hpp  color.hpp  graveyard.hpp  orbit.hpp  planet.hpp  position.hpp  radius.hpp  randint.hpp  status.hpp
src/inc/: engine.hpp
src/inc/components/: color.hpp  orbit.hpp  position.hpp
src/inc/systems/: base_system.hpp  render_system.hpp  trajectory_system.hpp
src/logging/: basic_log_controller.hpp
src/systems/: collision_system.hpp  render_system.hpp  trajectory_system.hpp
